<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:padding="8dp">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <TextView
            android:layout_marginStart="5dp"
            android:textColor="?attr/textColor"
            android:textSize="22sp"
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editInputTitle"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="5dp"
            android:textColor="?attr/textColor"
            android:textSize="22sp"
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editInputDescription"
            android:gravity="top"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="?attr/image"/>
            <TextView
                android:layout_marginStart="5dp"
                android:textColor="?attr/textColor"
                android:textSize="20sp"
                android:text="@string/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textDate"
                android:textColor="?attr/textColor"
                android:textSize="18sp"
                android:textStyle="italic"
                android:text="@string/date"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/dotDot"
                android:textColor="?attr/textColor"
                android:textSize="26sp"
                android:gravity="center"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textTime"
                android:text="@string/hour"
                android:textColor="?attr/textColor"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkBRemind"
                android:text="@string/remind_me"
                android:textColor="?attr/textColor"
                android:textSize="18sp"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnApply"
                android:text="@string/apply"
                android:layout_marginEnd="22dp"
                android:layout_toStartOf="@+id/btnCancel"
                android:textColor="#fff"
                android:background="@drawable/custom_button"
                android:layout_width="100dp"
                android:layout_height="42dp"/>
            <Button
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:textColor="#000000"
                android:layout_marginEnd="12dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/custom_button_cancel"
                android:layout_width="100dp"
                android:layout_height="42dp"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>