<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <ImageButton
            android:id="@+id/done"
            android:src="@drawable/done_v3"
            android:background="@null"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:scaleType="fitXY"
            android:layout_width="42dp"
            android:layout_height="42dp"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="InefficientWeight">
            <TextView
                android:id="@+id/textTitle"
                android:text="@string/title"
                android:textColor="?attr/textColor"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textDescription"
                android:text="@string/description"
                android:textColor="?attr/textColor"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textRemind"
                android:text="@string/remind"
                android:textColor="?attr/textColor"
                android:textStyle="italic"
                android:textSize="14sp"
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>